# verzon

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  targets.sh
assets/: schema.json
src/: args.rs  config.rs  fs.rs  http.rs  log.rs  main.rs  package.rs
src/changelog/: config.rs  git.rs  handler.rs  mod.rs  utils.rs
src/changelog/generation/: contract.rs  mod.rs  simple.rs  template.rs
src/conventions/: config.rs  handler.rs  mod.rs
src/conventions/conventional/: advertise.rs  builder.rs  bump.rs  changelog.rs  mod.rs  parse.rs  types.rs
src/git/: add.rs  commit.rs  log.rs  mod.rs  push.rs  remote.rs  rev_parse.rs  tag.rs  tracking.rs
src/markdown/: builder.rs  mod.rs
src/markdown/elements/: alert.rs  code.rs  h1.rs  h2.rs  h3.rs  h4.rs  h5.rs  h6.rs  image.rs  linebreak.rs  link.rs  list.rs  mod.rs  paragraph.rs  quote.rs  task.rs
src/metafile/: config.rs  git.rs  handler.rs  mod.rs
src/metafile/java/: write.rs
src/metafile/node/: write.rs
src/metafile/plain/: write.rs
src/procedures/: changelog.rs  config.rs  git.rs  mod.rs  semver.rs  webhooks.rs
src/semver/: config.rs  core.rs  mod.rs  type.rs  utils.rs
src/std/: command.rs  merge.rs  mod.rs  option.rs  panic.rs  reqwest.rs  string.rs
src/webhooks/: config.rs  handler.rs  mod.rs
src/webhooks/custom/: config.rs  http.rs  mod.rs  release.rs
src/webhooks/github/: config.rs  http.rs  release.rs  remote.rs
src/webhooks/gitlab/: config.rs  http.rs  mod.rs  release.rs  remote.rs
