[package]
name = "verzon"
description = "The only release tool you’ll ever need. Built in Rust for speed and reliability."
version = "0.0.0-alpha"
edition = "2024"
authors = ["Simon Kovtyk <simon@kovtyk.com>"]
readme = "README.md"
repository = "https://github.com/verzon-ci/verzon"
license = "MIT"

[dependencies]
serde_json = "1.0"
serde-xml-rs = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.51", features = ["derive"] }
chrono = "0.4.42"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
url = "2.5.7"
urlencoding = "2.1.3"
tokio = { version = "1", features = ["full"] }
colored = "3.0.0"
merge = "0.2.0"
once_cell = "1.21.3"
quick-xml = { version = "0.38.4", features = ["serialize"] }
reqwest-retry = "0.8.0"
reqwest-middleware = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
incremental = false
